Changes since xosview-1.8.4

  - Double buffered redering via the Xdbe library/extenstion

  - Add some experimental themes.

  - General code cleanup.

  - CPU meter for Hurd

  - Thermal Zone meter for Linux

  - Example meter (example.h)

  - Wireless link quality meter for Linux

  - '-o' command line to add "xosview*" specifc resources
    using the command line.

  - NetBSD netmeter just prints a message if it is not in
    the kmem group rather than aborting the application.
    xosview is no longer installed with special privileges
    on any platform.

  - BSD intrate meter now uses /proc

  - BSD gets copy of linux CPU meter and as a result now
    supports SMP.

  - Configure script update to find more libraries without assistance.
    When it does need help (hopefully rare) command line options are
    available.

  - Older BSD (libkvm based) systems no longer supported.  The
    code is still there but no longer compiles.  If someone can
    get it running... patches are welcome.

  - Add a decay option to "used labels" that smooths out their
    display and cuts down the load on the X server.  On by default
    on all meters that recieved the upgrade.

  - Mostly supports *most* non fixed width fonts.  Non mono spaced
    fonts that have a really extreme range in the height and width of
    their glyphs will still cause trouble but alot of the more reasonable
    (and a few of the less reasonable) look fine.

  - Add '-c' option to load an X resource "config" file from the
    command line.

  - Add an all the standard X command line options such as '-font',
    '-iconic', etc.

  - The '-h --help' option now prints a short (and complete) summary
    of all options

  - Support '!' comments at the end of a line rather than just the
    beginning.  This was never officially allowed in the X standard and
    it worked sometimes by luck.  Now it should work all the time.

  - General graphics drawing performance improvements.  Xosviews impact